<resources>
    <string name="app_name">Courier</string>
    <string name="app_description">Courier is a mobile RSS news reader with enhanced security features, offline reading and sharing capability.</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_help">@string/app_name</string>
    <string name="title_activity_downloads">@string/app_name</string>
    <string name="title_activity_add_feed">@string/app_name</string>
    <string name="title_activity_post">My Posts</string>
    <string name="title_activity_add_post">@string/app_name</string>
    <string name="title_activity_panic">@string/app_name</string>
    <string name="title_activity_view_media">@string/app_name</string>
    <string name="title_activity_settings">@string/app_name</string>
    <string name="title_activity_lock_screen">@string/app_name</string>
    <string name="title_activity_create_account">@string/app_name</string>
    <string name="title_activity_httpd_app_sender">SHARE APP</string>
    <string name="menu_tag">Search by Tag</string>
    <string name="menu_share">Share</string>
    <string name="menu_panic">Panic</string>
    <string name="menu_add_post">Add post</string>
    <string name="feed_filter_display_photos">Display photos</string>
    <string name="feed_filter_popular">Popular</string>
    <string name="feed_filter_favorites">My Favorites</string>
    <string name="feed_filter_shared_stories">Nearby</string>
    <string name="feed_filter_all_feeds">All Feeds</string>
    <string name="feed_filter_add_new">Manage Feeds</string>
    <string name="feed_share_popup_title">Share feed via</string>
    <string name="story_list_hint_add_favorite_text1">Make a list of your top stories here by tapping "favorite" in a story</string>
    <string name="story_list_hint_add_favorite_text2">Here are some favorites from fellow readers to hold you over:</string>
    <string name="story_list_hint_no_popular_text1">Stories get popular when comments are shared!</string>
    <string name="story_list_hint_no_popular_text2">These stories have long titles, perhaps they\'re worth talking about:</string>
    <string name="story_list_hint_no_shared_text1">The stories shared with you using Courier’s Nearby are listed here.</string>
    <string name="story_list_hint_no_shared_text2">To receive a share from a friend, go to the ‘Receive a Share’ screen from the side menu.</string>
    <string name="help_title">About Courier</string>
    <string name="help_tor_title">Go Online with Tor?</string>
    <string name="help_tor_content">Tor is an open network that helps keep you safe online. It defends against network surveillance that threatens your personal freedom and privacy. You must use the Orbot app to connect to the Tor network.</string>
    <string name="help_tor_button">Go Online with Tor</string>
    <string name="help_wipe_title">Wipe the App</string>
    <string name="help_wipe_content">Tap the panic button to delete your personal data within Courier. You can set the panic action to delete the entire app in your preferences.</string>
    <string name="help_wipe_button">Test panic button</string>
    <string name="help_share_title">Share locally, without Internet</string>
    <string name="help_share_content">Share stories, feeds and the entire app using Courier Nearby. It\'s safe, easy and only requires a friend nearby with Bluetooth. App sharing requires a WiFi network or hotspot.</string>
    <string name="help_data_title">Minimize Data Use</string>
    <string name="help_data_content">Tips to reduce your data consumption:\n\n1. Sync only the feeds that matter to you most. Courier allows you to sync individual feeds.\n\n2. Choose Bit Wise syncing mode in your preferences. This syncs only text, with the ability to load photos on a story by story basis.\n\n3. Expire your articles in a timely manner. Choose your time frame in your preferences.</string>
    <string name="about_guardian_title">About Guardian Project</string>
    <string name="about_guardian_content">The Guardian Project creates easy to use apps, open-source software libraries, operating system modifications, and customized mobile devices useful to any person looking to protect their communications and personal data from unjust intrusion and monitoring. Visit us at https://guardianproject.info</string>
    <string name="help_terms_group_title">Terms and Licenses</string>
    <string name="help_terms_title">Terms and Licenses</string>
    <string name="help_terms_content">Software licenses and more information available online at: https://guardianproject.info/apps/courier</string>
    <string name="help_show_news">Got it. Show me the news!</string>
    <string name="downloads_title">Media Downloads</string>
    <string name="downloads_complete">COMPLETE</string>
    <string name="downloads_in_progress">IN PROGRESS</string>
    <string name="downloads_operation_refresh">REFRESH</string>
    <string name="downloads_operation_cancel">CANCEL</string>
    <string name="story_comment_add_hint">Your comment here</string>
    <string name="pulldown_to_sync_no_net">No Internet. Try again later.</string>
    <string name="pulldown_to_sync">Pull down to re-sync feed</string>
    <string name="release_to_sync">Release to re-sync feed</string>
    <string name="last_synced_never">Never synced</string>
    <string name="last_synced_recently">Synced less than a minute ago</string>
    <string name="last_synced_minute">Synced %1$d minute ago</string>
    <string name="last_synced_hour">Synced %1$d hour ago</string>
    <string name="last_synced_day">Synced %1$d day ago</string>
    <string name="last_synced_minutes">Synced %1$d minutes ago</string>
    <string name="last_synced_hours">Synced %1$d hours ago</string>
    <string name="last_synced_days">Synced %1$d days ago</string>
    <string name="menu_news">News</string>
    <string name="menu_post">My Posts</string>
    <string name="menu_post_new">Create a Post</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_help">About Courier</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_receive_share">Receive a Share</string>
    <string name="menu_tor_connected">Connected to Tor</string>
    <string name="menu_tor_not_connected">Not connected to Tor</string>
    <string name="menu_psiphon_connected">Connected to Psiphon</string>
    <string name="menu_psiphon_not_connected">Not connected to Psiphon</string>
    <string name="menu_num_feeds">%1$d feeds</string>
    <string name="menu_num_stories">%1$d posts</string>
    <string name="menu_num_chats">%1$d chats</string>
    <string name="menu_num_downloads">%1$d items</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_lock_app">Lock App</string>
    <string name="story_item_short_author">By %1s</string>
    <string name="story_item_short_published_never"></string>
    <string name="story_item_short_published_recently">Now</string>
    <string name="story_item_short_published_minutes">%1$d m</string>
    <string name="story_item_short_published_minute">%1$d m</string>
    <string name="story_item_short_published_hours">%1$d hr</string>
    <string name="story_item_short_published_hour">%1$d hr</string>
    <string name="story_item_short_published_days">%1$d d</string>
    <string name="story_item_short_published_day">%1$d d</string>
    <string name="story_item_short_tag_results">Showing results for ##%1s##</string>
    <string name="story_item_share_popup_title">Share story via</string>
    <string name="story_item_search_by_tag_hint">Search by #tag</string>
    <string name="story_item_read_with_orweb">Read full article</string>
    <string name="error_feed_404">Feed was not found</string>
    <string name="error_feed_bad_url">Feed URL is not valid, please visit "manage feeds" to modify or delete it.</string>
    <string name="error_feed_unknown">Error syncing feed, please try again</string>
    <string name="panic_settings">Panic Settings</string>
    <string name="panic_cancel">Cancel</string>
    <string name="panic_hint">Swipe down to delete the app</string>
    <string name="panic_hint_wipe_content">Swipe down to delete personal data</string>
    <string name="panic_test_successful">Good job! In a real scenario, you would have successfully completed a wipe.</string>
    <string name="add_feed_add">Add</string>
    <string name="add_feed_operation_remove">REMOVE</string>
    <string name="add_feed_operation_copy_url">COPY URL</string>
    <string name="add_feed_operation_copy_url_clipboard_label">Feed URL</string>
    <string name="add_feed_operation_cancel">CANCEL</string>
    <string name="add_feed_manual_label">Enter RSS Feed URL:</string>
    <string name="add_feed_manual_hint">figandquince.com/feed/</string>
    <string name="add_feed_processing">Processing</string>
    <string name="add_feed_default_topic">Your Feeds</string>
    <string name="add_feed_expand">Show All</string>
    <string name="add_feed_collapse">Close</string>
    <string name="add_feed_not_loaded">Feed data not loaded</string>
    <string name="add_feed_error_loading">We were unable to load this feed. Be sure that the RSS feed URL is correct.</string>
    <string name="settings_heading_proxy">Proxy</string>
    <string name="settings_proxy_tor">Tor</string>
    <string name="settings_proxy_psiphon">Psiphon</string>
    <string name="settings_proxy_none">None of these</string>
    <string name="settings_heading_chat">Chat</string>
    <string name="settings_gibberbot_connected">ChatSecure account connected</string>
    <string name="settings_heading_panic_action">Panic Action</string>
    <string name="settings_panic_action_info">Choose the action you want the panic button to take.</string>
    <string name="settings_panic_wipe_app">Wipe entire app</string>
    <string name="settings_panic_wipe_content">Wipe my content</string>
    <string name="settings_heading_login">Auto Lock</string>
    <string name="settings_security_passphrase_timeout">Lock Automatically</string>
    <string name="settings_security_passphrase_timeout_info">Locking allows your information to be encrypted and stored safely on your device. Choose timeout.</string>
    <string name="settings_security_passphrase_timeout0">Never lock</string>
    <string name="settings_security_passphrase_timeout1">Immediate</string>
    <string name="settings_security_passphrase_timeout2">1 minute</string>
    <string name="settings_security_passphrase_timeout3">1 hour</string>
    <string name="settings_security_passphrase_timeout4">1 day</string>
    <string name="settings_security_passphrase_timeout5">1 week</string>
    <string name="settings_enable_screenshots">Enable Screenshots</string>
    <string name="generic_second">second</string>
    <string name="generic_seconds">seconds</string>
    <string name="generic_minute">minute</string>
    <string name="generic_minutes">minutes</string>
    <string name="generic_hour">hour</string>
    <string name="generic_hours">hours</string>
    <string name="generic_day">day</string>
    <string name="generic_days">days</string>
    <string name="generic_week">week</string>
    <string name="generic_weeks">weeks</string>
    <string name="generic_month">month</string>
    <string name="generic_months">months</string>
    <string name="generic_year">year</string>
    <string name="generic_years">years</string>
    <string name="settings_security_password_attempts">Wrong Password Attempts</string>
    <string name="settings_security_password_attempts_label">Choose the number of times a wrong password can be entered before your personal data is wiped from the app.</string>
    <string name="settings_security_password_attempts_1">2</string>
    <string name="settings_security_password_attempts_2">3</string>
</resources>