<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top" >

    <Button
        android:id="@+id/btnDone"
        style="@style/HelpButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:minHeight="50dp"
        android:text="@string/help_show_news" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnDone"
        android:layout_alignWithParentIfMissing="true"
        android:background="@drawable/background_news" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_with_bottom_shadow"
                android:orientation="vertical" >

                <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                    style="@style/HelpTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/help_tor_title" />

                <TextView
                    style="@style/HelpTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_tor_content" />

                <Button
                    android:id="@+id/btnConnectTor"
                    style="@style/HelpButtonDiscreteStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_menu_tor"
                    android:text="@string/help_tor_button"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_with_bottom_shadow"
                android:weightSum="1" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.6"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    android:src="@drawable/img_panic" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="#ffffff"
                    android:orientation="vertical" >

                    <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                        style="@style/HelpTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_wipe_title" />

                    <TextView
                        style="@style/HelpTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_wipe_content" />

                    <Button
                        android:id="@+id/btnTestPanic"
                        style="@style/HelpButtonDiscreteStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_wipe_button" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_with_bottom_shadow"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="#ffffff"
                    android:orientation="vertical" >

                    <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                        style="@style/HelpTitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_share_title" />

                    <TextView
                        style="@style/HelpTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_share_content" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/img_local_share" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="5dp"
               android:background="@drawable/white_with_bottom_shadow"
               android:weightSum="1" >
	      
              <ImageView
                  android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
                 android:adjustViewBounds="true"
                 android:scaleType="fitStart"
                 android:src="@drawable/img_about_discuss" />
	      
              <LinearLayout
                  android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.4"
                 android:background="#ffffff"
                 android:orientation="vertical" >
		
                <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                    style="@style/HelpTitleStyle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="start|center_vertical"
                   android:text="@string/help_chat_title" />
		
                <TextView
                    style="@style/HelpTextStyle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/help_chat_content" />
              </LinearLayout>
            </LinearLayout>
	    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_with_bottom_shadow"
                android:orientation="vertical" >

                <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                    style="@style/HelpTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/help_data_title" />

                <TextView
                    style="@style/HelpTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_data_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_with_bottom_shadow"
                android:orientation="vertical" >

                <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                    style="@style/HelpTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/about_guardian_title" />

                <TextView
                    style="@style/HelpTextLinkedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_guardian_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/white_with_bottom_shadow"
                android:orientation="vertical" >

                <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
                    style="@style/HelpTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:text="@string/help_terms_title" />

                <TextView
                    style="@style/HelpTextLinkedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_terms_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvVersion"
                style="@style/HelpTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Version 1.0"
                android:textColor="#888888"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
